# cantordust-task1

./: .gitignore  README.md  main.py  pyproject.toml
output/: cover_note_to_ramesh.md  facts_manufacturer_pdf1.md  facts_manufacturer_pdf2.md  nepal_compliance_draft.md  reconciliation_report.md
src/: agent.py  pdf_reader.py  report.py
