[project]
name = "cantordust-task1"
version = "0.1.0"
description = "Cantordust AI Engineer Assessment - Task 1: China to Nepal solar inverter compliance draft"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "langgraph>=0.2.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
run = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
